# TT-Buda-Kernels

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py  setup_cpp.py  test_implementation.py
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
examples/: basic_usage.py
profiles/: profile_1749744038.json  profile_1749744092.json  profile_1749744330.json
src/tt_buda/: __init__.py
src/tt_buda/benchmarks/: __init__.py  runner.py
src/tt_buda/core/: __init__.py  backend.py  compiler.py  operators.py  passes.py  runtime.py
src/tt_buda/dashboard/: __init__.py  collector.py  metrics.py
src/tt_buda/kernels/cpp/: attention.cpp  main.cpp  matmul.cpp
src/tt_buda/model_zoo/: __init__.py
src/tt_buda/model_zoo/diffusion/: __init__.py  stable_diffusion.py
src/tt_buda/model_zoo/nlp/: __init__.py  bert.py
src/tt_buda/model_zoo/vision/: __init__.py  resnet.py
src/tt_buda/pytorch_integration/: __init__.py  autograd.py  custom_ops.py  dispatcher.py
src/tt_buda/tools/: __init__.py  profiler.py
src/tt_buda/utils/: __init__.py  config.py  logging.py
